<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_discover">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.cryptick.ui.discover.DiscoverFragment"
        android:label="@string/title_discover" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.cryptick.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites" />

    <fragment
        android:id="@+id/navigation_calculator"
        android:name="com.example.cryptick.ui.calculator.CalculatorFragment"
        android:label="@string/title_calculator" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.cryptick.ui.profile.ProfileFragment"
        android:label="@string/title_profile" />

</navigation>